internal/controller/services/gateway/resources/destinationrule-tls.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: odh-tls-rule
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/part-of: data-science-gateway
spec:
  host: 'kube-auth-proxy.openshift-ingress.svc.cluster.local'
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8443
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
    - port:  # do we really need 443 as well?
        number: 443
      tls:
        mode: SIMPLE
        insecureSkipVerify: true

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: data-science-components
  namespace: APPLICATION_NAMESPACE
  labels:
    app.kubernetes.io/part-of: data-science-gateway
spec:
  host: '*.APPLICATION_NAMESPACE.svc.cluster.local'
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8443
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
