internal/controller/services/gateway/resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-science-gateway
  namespace: openshift-ingress
spec:
  host: GATEWAY_DOMAIN
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: data-science-gateway-data-science-gateway-class
    weight: 100
  wildcardPolicy: None
